--- a/src/sass/topbar.sass
+++ b/src/sass/topbar.sass
@@ -4,6 +4,7 @@
   width: 100%
   background-color: white
   box-shadow: 0 1px 1px rgba(black, 0.15)
+  min-width: 980px
 
 .topbar-logo
   width: 120px
