--- a/src/sass/util.sass
+++ b/src/sass/util.sass
@@ -73,7 +73,7 @@
 
 .wrapper
   +margin(null auto)
-  width: 90%
+  width: 95%
   max-width: 1000px
 
 %button-reset
@@ -125,6 +125,22 @@
 
 .col-70
   width: 70%
+
+// Legacy centering
+.centered-outer
+  display: table
+  position: absolute
+  height: 100%
+  width: 100%
+
+.centered-middle
+  display: table-cell
+  vertical-align: middle
+  text-align: center
+
+.centered-inner
+  margin: 0 auto
+  display: inline-block
 
 
 
