--- a/src/sass/topbar.sass
+++ b/src/sass/topbar.sass
@@ -5,6 +5,7 @@
   background-color: white
   box-shadow: 0 1px 1px rgba(black, 0.15)
   min-width: 980px
+  z-index: 1
 
 .topbar-logo
   width: 120px
