--- a/src/sass/layouts.sass
+++ b/src/sass/layouts.sass
@@ -17,9 +17,6 @@
   float: left
   top: 0
   left: auto
-  .content
-    height: 100px
-    background-color: black
 
 .content-view
   width: calc(100% - 300px)
@@ -39,3 +36,24 @@
 .list-content
   padding-top: calc(52px + 1rem) !important
   max-height: 100%
+
+// Aside & Content layout
+.aside-content-container
+  +clearfix
+  padding-bottom: 1rem
+  .aside
+    width: 350px
+    float: left
+  .content
+    width: calc(100% - 350px - 1rem)
+    float: right
+
+
+
+
+
+
+
+
+
+
