--- a/src/sass/localized.sass
+++ b/src/sass/localized.sass
@@ -11,3 +11,28 @@
 
 .patients-pie-chart
   height: 300px
+
+// Formularies general data
+.questions-tab
+  padding-top: 58px
+
+.questions-tab-header
+  +position(absolute, 48px 0 null 0)
+  padding: 1rem 1rem 0 1rem
+  background-color: white
+
+.questions-list-item
+  transition: background-color 200ms
+  background-color: rgba(black, $p6)
+  padding: 0.5rem
+  margin-bottom: 0.5rem
+  border-radius: 2px
+  cursor: move
+  &:hover
+    background-color: rgba(black, $p5)
+  i, .question
+    vertical-align: middle
+  i
+    color: rgba(black, 0.2)
+  .question
+    color: rgba(black, $p3)
