Crear formulario completo, crear preguntas y crear usuario

--- a/src/sass/buttons.sass
+++ b/src/sass/buttons.sass
@@ -49,7 +49,7 @@
 
 .btn--icon
   +size(42px)
-  display: flex
+  display: inline-flex
   align-items: center
   justify-content: center
   transition: color 200ms
