--- a/src/sass/format.sass
+++ b/src/sass/format.sass
@@ -55,6 +55,16 @@ img
   width: 100%
   max-width: 500px
 
+.smaller-container
+  +margin(null auto)
+  width: 100%
+  max-width: 1000px
+
+.smallest-container
+  +margin(null auto)
+  width: 100%
+  max-width: 600px
+
 .border-title
   padding-left: 1rem
   border-left: 5px solid $primary-color
