--- a/views/forms/index.phtml
+++ b/views/forms/index.phtml
@@ -3,7 +3,7 @@
     <div class="head-flex">
       <h2 class="border-title flex-1">Formularios</h2>
       <div>
-        <button class="btn--secondary sright">Crear Pregunta</button>
+        <a href="/forms/new-question" class="btn--secondary sright">Crear Pregunta</a>
         <a href="/forms/new" class="btn--primary">Crear Formulario</a>
       </div>
     </div>
