--- a/views/users/index.phtml
+++ b/views/users/index.phtml
@@ -1,9 +1,9 @@
 <div class="list-view-layout-main-wrapper wrapper">
-  <div class="list-view-layout">
+  <div class="list-view-layout smaller-container">
     <div class="head-flex">
       <h2 class="border-title flex-1">Usuarios</h2>
       <div>
-        <a href="/forms/new" class="btn--primary">Nuevo Usuario</a>
+        <a href="/users/new" class="btn--primary">Nuevo Usuario</a>
       </div>
     </div>
     <div class="aside-content-container">
