--- a/src/sass/appform.sass
+++ b/src/sass/appform.sass
@@ -15,11 +15,27 @@
     transition: color 200ms
     content: "Arrastra preguntas aquí"
     display: block
+    margin-top: 0.5rem
     text-align: center
     color: rgba(black, $p4)
     font-size: 0.8rem
   &.dirty:after
     content: none
+
+.appform-outer
+  padding: 1rem
+
+.af-container
+  transition: background-color 200ms
+  padding: 2rem 1rem
+
+.appform-wrapper
+  width: 100%
+  max-width: 600px
+  margin: 0 auto
+
+.appform-row .drag-handle
+  +position(absolute, 0 0 null null)
 
 .af--dark
   .visit-block-legend
@@ -28,20 +44,10 @@
     border-color: rgba(white, $p4)
     &:after
       color: rgba(white, $p3)
-
-.appform-outer
-  padding: 1rem
-
-.appform-container
-  transition: background-color 200ms
-  padding: 2rem 1rem
-.af-bg
-  background-color: white
-
-.appform-wrapper
-  width: 100%
-  max-width: 600px
-  margin: 0 auto
+  .appform-row .drag-handle
+    color: rgba(white, $p4)
+    &:hover
+      color: rgba(white, $p3)
 
 // Actual form elements
 $main-color: #ffca2c
@@ -74,7 +80,22 @@ $accent-color: $primary-color
   &.clean
     color: rgba(black, $p4)
 
-%appform-input
+.appform-row
+  +user-select(none)
+  margin-bottom: 3rem
+  &.gu-mirror
+    opacity: 1 !important
+    transform-origin: right top
+    transform: scale(0.8)
+
+.af-label
+  display: block
+  margin-bottom: 1.2rem
+  font-size: 1rem
+  font-weight: bold
+  letter-spacing: 0.05em
+
+%af-input
   transition: box-shadow 200ms
   appearance: none
   width: 100%
@@ -82,46 +103,31 @@ $accent-color: $primary-color
   margin: 0
   padding: 0 0.5rem
   border: none
-  background-color: #F5F5F5
-  box-shadow: 0px 0px 0 rgba(black, 0.1)
-  border-radius: 0
-  color: rgba(black, $p3)
+  border-radius: 2px
   font-size: 1.2rem
   +placeholder
-    color: rgba(black, $p4)
+    color: rgba(black, 0.6)
   &:focus
     outline: none
 
-.appform-input
-  @extend %appform-input
+.af-input
+  @extend %af-input
 
-.appform-textarea
-  @extend %appform-input
+.af-textarea
+  @extend %af-input
   height: auto
   min-height: 100px
+  max-height: 250px
   resize: vertical
-  max-height: 200px
-  padding: 1rem
-.af-shw-focus
-  box-shadow: -6px 6px 0 rgba(black, 0.1)
-.af-shw-hover
-  box-shadow: -6px 6px 0 rgba(black, 0.1)
+  padding: 0.5rem
 
-.appform-label
-  display: block
-  margin-bottom: 1rem
-  font-size: 1rem
-  font-weight: bold
-.af-accent
-  color: $primary-color
-
-.appform-button
-  appearance: none
+.af-submit
   transition: box-shadow 200ms, background-color 200ms
+  appearance: none
   border: none
   margin: 0
   padding: 1rem 1.5rem
-  text-align: center  
+  text-align: center
   font-size: 0.8rem
   text-transform: uppercase
   font-weight: bold
@@ -130,33 +136,165 @@ $accent-color: $primary-color
   display: inline-block
   line-height: 1.2
   text-decoration: none
+  border-radius: 2px
   &:focus
     outline: none
-  &:hover, &:focus
-    box-shadow: -6px 6px 0 rgba(black, 0.1)
-  &:active
-    box-shadow: 0px 0px 0 rgba(black, 0.1)
-.af-els
-  background-color: $primary-color
-  color: white
-.af-els-hover
-  &:hover, &:focus
-    background-color: shade($primary-color, 10%)
 
-.appform-row
-  +user-select(none)
-  position: relative
-  margin-bottom: 2rem
-  .drag-handle
-    +position(absolute, 0 0 null null)
-    width: 42px
-    height: 28px
-    color: rgba(black, $p4)
+.af-checkbox
+  font-size: 0
+  input[type=checkbox]
+    display: none
+  label
+    display: inline-block
+    margin-bottom: 1rem
+    font-size: 1rem
+    width: 49%
+    margin-right: 1%
+  .af-list-label
+    vertical-align: middle
+  .af-checkbox-impostor
+    +size(26px)
+    transition: background-color 200ms
+    display: inline-block
+    border-radius: 2px
+    vertical-align: middle
+    margin-right: 0.5rem
     text-align: center
-    line-height: 28px
-    cursor: move
-    &:hover
-      color: rgba(black, $p3)
+    i
+      transition: opacity 200ms, transform 200ms
+      transform: scale(0)
+      display: inline-block
+      line-height: 26px
+      font-size: 20px
+      opacity: 0
+      color: inherit
+  input[type=checkbox]:checked + .af-checkbox-impostor
+    background-color: green
+    i
+      transform: scale(1)
+      opacity: 1
+
+.af-radio-active
+  +position(absolute, 0)
+  transition: opacity 200ms, transform 200ms
+  background-color: blue
+  border-radius: 50%
+  transform: scale(0)
+  opacity: 0
+
+.af-radio-label
+  transition: color 200ms, transform 200ms
+  position: relative
+  display: inline-block
+  font-size: 0.8rem
+  transform: scale(1)
+
+.af-radio
+  text-align: center
+  font-size: 0
+  margin-top: 2rem
+  input[type=radio]
+    display: none
+  label
+    +size(80px)
+    position: relative
+    display: inline-flex
+    align-items: center
+    flex-direction: column
+    justify-content: center
+    border-radius: 50%
+    vertical-align: middle
+    padding: 0.5rem
+    margin: 0 0.6rem
+    font-weight: bold
+    color: rgba(black, 0.8)
+    cursor: pointer
+  input[type=radio]:checked + .af-radio-active
+    transform: scale(1.2)
+    opacity: 1
+  input[type=radio]:checked + .af-radio-active + .af-radio-label
+    transform: scale(1.2)
+
+.af-scale
+  padding-bottom: 1.5rem
+  counter-reset: section
+  label:after
+    +position(absolute, null null -1.5rem null)
+    content: counter(section)
+    display: block
+    font-size: 0.6rem
+    margin-top: 0.5rem
+    counter-increment: section
+
+
+// %appform-input
+//   transition: box-shadow 200ms
+//   appearance: none
+//   width: 100%
+//   height: 42px
+//   margin: 0
+//   padding: 0 0.5rem
+//   border: none
+//   background-color: #F5F5F5
+//   box-shadow: 0px 0px 0 rgba(black, 0.1)
+//   border-radius: 0
+//   color: rgba(black, $p3)
+//   font-size: 1.2rem
+//   +placeholder
+//     color: rgba(black, $p4)
+//   &:focus
+//     outline: none
+
+// .appform-input
+//   @extend %appform-input
+
+// .appform-textarea
+//   @extend %appform-input
+//   height: auto
+//   min-height: 100px
+//   resize: vertical
+//   max-height: 200px
+//   padding: 1rem
+// .af-shw-focus
+//   box-shadow: -6px 6px 0 rgba(black, 0.1)
+// .af-shw-hover
+//   box-shadow: -6px 6px 0 rgba(black, 0.1)
+
+// .appform-label
+//   display: block
+//   margin-bottom: 1rem
+//   font-size: 1rem
+//   font-weight: bold
+// .af-accent
+//   color: $primary-color
+
+// .appform-button
+//   appearance: none
+//   transition: box-shadow 200ms, background-color 200ms
+//   border: none
+//   margin: 0
+//   padding: 1rem 1.5rem
+//   text-align: center  
+//   font-size: 0.8rem
+//   text-transform: uppercase
+//   font-weight: bold
+//   letter-spacing: 0.1em
+//   cursor: pointer
+//   display: inline-block
+//   line-height: 1.2
+//   text-decoration: none
+//   &:focus
+//     outline: none
+//   &:hover, &:focus
+//     box-shadow: -6px 6px 0 rgba(black, 0.1)
+//   &:active
+//     box-shadow: 0px 0px 0 rgba(black, 0.1)
+// .af-els
+//   background-color: $primary-color
+//   color: white
+// .af-els-hover
+//   &:hover, &:focus
+//     background-color: shade($primary-color, 10%)
 
 
 
