--- a/views/_layout.phtml
+++ b/views/_layout.phtml
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Théa</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   <link rel="stylesheet" href="/assets/styles/app.css">
   <!-- TypeKit Fonts -->
