--- a/src/sass/format.sass
+++ b/src/sass/format.sass
@@ -50,6 +50,9 @@ img
   width: 95%
   max-width: 1200px
 
+.main
+  padding-top: calc(60px + 2rem)
+
 .smaller-wrapper
   +margin(null auto)
   width: 100%
