Added components page, with alerts

--- a/src/sass/format.sass
+++ b/src/sass/format.sass
@@ -1,5 +1,8 @@
 $primary-color: #397CEB
 $back-color: #EBF4F5
+$error-color: #E34449
+$warning-color: #F28F3F
+$success-color: #62C480
 
 $modular-scale-ratio: $minor-third
 
