--- a/views/_layout.phtml
+++ b/views/_layout.phtml
@@ -37,6 +37,10 @@
             <i class="material-icons">&#xE7FB;</i>
             <span>Usuarios</span>
           </a>
+          <a href="/components" <?= active_class($path_name, 'components') ?>>
+            <i class="material-icons">&#xE8F1;</i>
+            <span>Componentes</span>
+          </a>
         </nav>
         <div class="dropdown-container user-dropdown-container" data-dd>
           <span class="user-dropdown-btn dropdown-btn" data-dd-opener>
